made changes and corrected errors in Jemo as we approach 100% code coverage on the plugin manager. Coverage currently stands at 60%.